--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
   <header class="top">
     <div class="brand">
       <h1>Cyber-Blue Privacy & OSINT Scanner</h1>
-      <p class="muted">See what your browser exposes & discover public profiles for a username (consent required).</p>
+      <p class="muted">Consent required — educational only.</p>
     </div>
   </header>
 
   <main class="container">
     <section class="card consent" id="consentCard">
-      <h2>Before we start — Consent</h2>
-      <p>This tool will: <b>read browser/device attributes</b> and (if you choose) <b>scan public social/profile URLs for a username</b>. Nothing is sent or stored until you click <em>Allow scan</em> and confirm the OSINT scan. Use ethically.</p>
-      <label><input id="confirmOsintCheckbox" type="checkbox"> I understand and will use results responsibly</label>
+      <h2>Consent & Warnings</h2>
+      <p>This tool will read your browser/device attributes and optionally probe public profile URLs for a username. Nothing is recorded or scanned until you click <strong>Allow scan</strong> and optionally enable the OSINT username scan. The "simulate tracking" demo shows how a malicious site *could* correlate signals — it is only shown for your own data.</p>
+
+      <label><input id="confirmCheckbox" type="checkbox"> I will use this tool ethically and only on data I own.</label>
       <label class="tiny">Type <code>I CONSENT</code> to enable OSINT scanning</label>
       <input id="consentText" placeholder="I CONSENT" />
+
       <div class="row">
         <button id="allowBtn" class="btn primary">Allow scan</button>
-        <button id="allowOsintBtn" class="btn secondary" disabled>Allow OSINT (username scan)</button>
+        <button id="enableOsintBtn" class="btn secondary" disabled>Enable OSINT scanning</button>
       </div>
     </section>
 
@@ -44,26 +46,19 @@
       <div class="osint-box">
         <input id="usernameInput" placeholder="Enter username (e.g. aurenix)" />
         <button id="startOsint" class="btn primary">Scan username</button>
-        <div id="progress" class="progress" style="display:none;"><div id="progressBar"></div></div>
+        <button id="simulateBtn" class="btn tertiary">Simulate tracking</button>
       </div>
+
+      <div id="progress" class="progress" style="display:none;"><div id="progressBar"></div></div>
 
       <div id="resultsGrid" class="grid"></div>
 
       <div class="row">
         <button id="exportBtn" class="btn tertiary">Export JSON</button>
-        <a href="compare.html" class="btn link">Compare stored scans</a>
+        <a href="compare.html" class="btn link">Compare my scans</a>
       </div>
     </section>
-
-    <section class="card small" id="notes">
-      <h4>Notes</h4>
-     
-    </section>
   </main>
-
-  <footer class="footer">
-    <small>Educational use only — do not abuse. This tool requires explicit consent.</small>
-  </footer>
 
 <script src="script.js"></script>
 </body>
